[tool.poetry]
name = "github_app_auth_UAT"
version = "0.1.0"
description = ""
authors = ["ram-0209 <ramkarthick.alag@tigeranalytics.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.24.1"
cachetools = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
